# 42-Prague

./: .gitignore  Makefile  README.md  bad_500.txt  checker  cleaner.c  coder_routines.c  codexion  codexion.h  config.txt  ft_atoi.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_printf.c  ft_printf.h  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strncpy  (+41 more)
Module00/: ft_count_harvest_iterative.py  ft_garden_summary.py  (+7 more)
Module08/ex02/: pyproject.toml
Module08/ex1/: loading.py  pyproject.toml  requirements.txt
pacman/: .gitignore  Makefile  README.md  config.json  main.py  mazegenerator-2.1.0-py3-none-any.whl  pac-man.py  pyproject.toml  scoreboard.json
pacman/project_menagement/: ARCHITECTURAL_CHOICES.md  BLOCKING_POINTS.md  RISK_ANALYSIS.md  TEAM_ORGANIZATION.md  TEST_PLAN.md  TIMELINE.md
pacman/src/: constants.py  state.py
pacman/src/backend/: game_actions.py  game_initializer.py  game_physics.py  game_state_manager.py  ghost_life_cycle.py  ghost_movement_logic.py  logic.py  parse_config_files.py  score_board_handler.py
pacman/src/frontend/: controller.py  event.py  renderer.py  scene.py
pacman/src/frontend/scenes/: final_scene.py  game_scene.py  highscores_scene.py  instructions_scene.py  main_menu_scene.py  models.py  pause_scene.py
pacman/tests/: test_game_initializer.py
(+269 files in other folders)
