[project]
name = "pacman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "mazegenerator",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "pygame-ce>=2.5.7",
    "pygame-textinput>=1.0.1",
]

[tool.uv]
override-dependencies = ["pygame; sys_platform == 'never'"]

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-2.1.0-py3-none-any.whl" }
