[project]
name = "poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "sudas",email = "sudas@student.42prague.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas (>=2.1.0)", "requests (>=2.31.0)", "matplotlib (>=3.7.2)"]
[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
